fixed nav alignment mobile

--- a/new/menu.scss
+++ b/new/menu.scss
@@ -1279,7 +1279,8 @@ code, pre {
   cursor: pointer;
   width: 50px;
   height: 50px;
-  position: relative
+  position: relative;
+  margin-right: 6px !important;
 }
 .globalNav .navSection.mobile .rootLink h2 {
   color: inherit
